translated chapter 0 to tamil

--- a/lessons/en/chapter_0.yaml
+++ b/lessons/en/chapter_0.yaml
@@ -31,6 +31,8 @@
     * [Italian](00_it.html)
     * [Tiếng Việt](00_vi.html)
     * [العربية](00_ar.html)
+    * [தமிழ்](00_tm.html)
+
 
     If you have suggestions on content or would like to contribute to translations, check out Tour of Rust's [github repository](https://github.com/richardanaya/tour_of_rust).
 
