corrected spelling mistake chapter 0

--- a/lessons/tm/chapter_0.yaml
+++ b/lessons/tm/chapter_0.yaml
@@ -32,7 +32,7 @@
     * [Tiếng Việt](00_vi.html)
     * [العربية](00_ar.html)
 
-    உள்ளடக்கத்தில் உங்களுக்கு பரிந்துரைகள் இருந்தால் அல்லது மொழிபெயர்ப்புகளுக்கு பங்களிக்க விரும்பினால், டூர் ஆஃப் ரஸ்ட்ஸைப் பார்க்கவும் [github repository](https://github.com/richardanaya/tour_of_rust).
+    உள்ளடக்கத்தில் உங்களுக்கு பரிந்துரைகள் இருந்தால் அல்லது மொழிபெயர்ப்புகளுக்கு பங்களிக்க விரும்பினால், டூர் ஆஃப் ரஸ்ட்டைப் பார்க்கவும் [github repository](https://github.com/richardanaya/tour_of_rust).
 
     உங்கள் கீபோர்டை பயன்படுத்தி நீங்கள் நேவிகேட் செய்யலாம் <span class="emoji">⬅️</span> and <span class="emoji">➡️</span>.
 
