--- a/lessons/tm/chapter_1.yaml
+++ b/lessons/tm/chapter_1.yaml
@@ -1,4 +1,4 @@
-- title: Chapter 1 - The Basics
+- title: அத்தியாயம் 1 - அடிப்படைகள்
   content_markdown: >
     In this first chapter we're going to be exploring the very basics
     with functions, variables, and the most primitive types. Glad to have you on
